--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,6 @@
     "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "emitter": "^0.0.2",
     "exceljs": "^4.4.0",
@@ -24,7 +23,6 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
-    "sequelize": "^6.37.6",
-    "socket.io": "^4.8.1"
+    "sequelize": "^6.37.6"
   }
 }
