mengupdate tampilan dashboard dan mengoptimalkan scriptnya

--- a/server/.env
+++ b/server/.env
@@ -1,20 +1,19 @@
 # Database configuration
-# Sertakan tanda petik satu saat menginputkan value
-DB_HOST='localhost'
-#DB_PORT=3306
-DB_USER='root'
-DB_PASSWORD='jazani07'
-DB_NAME='rsud_siak'
-DB_DIALECT='mysql'
+DB_HOST=localhost
+DB_PORT=3306
+DB_USER=root
+DB_PASSWORD=jazani07
+DB_NAME=rsud_siak
+DB_DIALECT=mysql
 
 # Server configuration
 PORT=3000
 
 # JWT secret key
-JWT_SECRET='mysecretkey'
+JWT_SECRET=keperawatanrsudtr
 
 # Environment
-#NODE_ENV=development
+NODE_ENV=local
 
 # Telegram
-TELEGRAM_TOKEN='7500737693:AAGd7iEjGcP3lF4t7CPi9YspRB7h1s8PH6Q'
+TELEGRAM_TOKEN=7500737693:AAGd7iEjGcP3lF4t7CPi9YspRB7h1s8PH6Q
