mengganti dan memperbaiki fungsi jwt token agar bisa ter refresh setelah 15 menit serta membuatnya berfungsi

--- a/server/.env
+++ b/server/.env
@@ -10,7 +10,9 @@ DB_DIALECT=mysql
 PORT=3000
 
 # JWT secret key
-JWT_SECRET=keperawatanrsudtr
+# JWT_SECRET=keperawatanrsudtr
+ACCESS_TOKEN_SECRET=keperawatanrsudtr
+REFRESH_TOKEN_SECRET=kepalabidangkeperawatan
 
 # Environment
 NODE_ENV=local
