--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "emitter": "^0.0.2",
     "exceljs": "^4.4.0",
